kubernetes/services/cyberchef/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cyberchef
  labels:
    name: cyberchef
    type: productivity
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
